# MailMagic-Django-project

./: .env.test  README.md  pyproject.toml
client/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
client/migrations/: 0001_initial.py
client/templates/client/: mailclient_confirm_delete.html  mailclient_detail.html  mailclient_form.html  mailclient_list.html
config/: settings.py  urls.py
fixtures/: data.json
mailing/: admin.py  forms.py  models.py  send_mailing.py  services.py  urls.py  views.py
mailing/management/commands/: expand_db.py  fill_db.py
mailing/migrations/: 0001_initial.py
mailing/templates/mailing/: base.html  index.html  mailinglog_detail.html  mailinglog_list.html  mailingsettings_confirm_delete.html  mailingsettings_detail.html  mailingsettings_form.html  mailingsettings_list.html
mailing/templates/mailing/includes/: inc_mailing_footer.html  inc_mailing_menu.html
post/: admin.py  forms.py  models.py  services.py  urls.py  views.py
post/migrations/: 0001_initial.py
post/templates/post/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
static/css/: bootstrap.css
users/: admin.py  forms.py  models.py  services.py  urls.py  views.py
users/management/commands/: create_groups.py  create_moderator_and_blogger.py  csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_is_active.py
users/templates/users/: change_password.html  login.html  register.html  user_form.html  user_list.html
